# ScaRF

./: CMakeLists.txt  Doxyfile.in  README.md
doc/: Doxyfile.in  mainpage.dox
include/: mainpage.dox
include/scarf/: DataSet.cuh  InformationGain.cuh  RF.cuh  RFConfig.cuh  Sample.cuh
include/scarf/Tree/: Tree.cuh  TreeTrainingUtils.cuh
include/scarf/cuda/: DeviceManager.hpp  cudaUtils.h  userDefs.h
samples/: CMakeLists.txt
samples/data/: samples.csv
samples/simple_example/: main.cu
